--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/solarized"]
 	path = bundle/solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "bundle/rainbow-parentheses"]
+	path = bundle/rainbow-parentheses
+	url = git@github.com:luochen1990/rainbow.git
