--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "bundle/rainbow-parentheses"]
 	path = bundle/rainbow-parentheses
 	url = git@github.com:luochen1990/rainbow.git
+[submodule "bundle/one-dark"]
+	path = bundle/one-dark
+	url = git@github.com:geoffharcourt/one-dark.vim.git
