--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "bundle/dash"]
 	path = bundle/dash
 	url = https://github.com/rizzatti/dash.vim.git
+[submodule "bundle/eunuch"]
+	path = bundle/eunuch
+	url = git@github.com:tpope/vim-eunuch.git
+[submodule "bundle/jshint"]
+	path = bundle/jshint
+	url = git@github.com:Shutnik/jshint2.vim.git
